# SentimentsStream

./: .env  .env.example  .gitignore  Jenkinsfile  Makefile  README.md  bootstrap_skeleton.sh  comments_natural_language.md  plan.md
.claude/: settings.json
data/bronze/: comments_bronze.parquet
data/checkpoints/: metadata  (+1 more)
scripts/: run_e2e_smoke.sh  seed_mongo.sh
services/spark-pipeline/: pyproject.toml  requirements.txt
services/spark-pipeline/src/: __init__.py
services/spark-pipeline/src/adapters/inbound/: socket_stream_listener.py
services/spark-pipeline/src/adapters/outbound/: mongo_prediction_writer.py
services/spark-pipeline/src/application/: classify_streaming_batch.py  ingest_csv_to_bronze.py  train_sentiment_model.py
services/spark-pipeline/src/domain/entities/: __init__.py  comment.py  sentiment_prediction.py
services/spark-pipeline/src/domain/ports/: __init__.py  comment_source.py  model_store.py  prediction_sink.py  timestamp_generator.py
services/spark-pipeline/src/domain/value_objects/: __init__.py  cleaned_text.py  sentiment_label.py
services/spark-pipeline/src/infrastructure/generators/: deterministic_timestamp_generator.py
services/spark-pipeline/src/infrastructure/spark/: ml_pipeline_builder.py
services/spark-pipeline/src/main/: __init__.py  backfill_mongo.py  stream_main.py  train_main.py
services/spark-pipeline/src/producers/: socket_producer.py
services/spark-pipeline/tests/integration/: test_ml_pipeline.py
services/spark-pipeline/tests/unit/: test_domain_entities.py  test_ingest_csv_to_bronze.py  test_value_objects.py
(+124 files in other folders)
