[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sentiment-stream-spark"
version = "1.0.0"
description = "SentimentStream Spark pipeline service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyspark==3.5.1",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
